--- a/kinopoisk-main/show.html
+++ b/kinopoisk-main/show.html
@@ -6,7 +6,7 @@
 	<title>Фильм Интерстеллар</title>
 	<meta name="description" content="Киномонстр - это портал о кино" />
 	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -95,7 +95,7 @@
 				<hr>	
 				<h2>Описание Интерстеллар</h2>
 				<div class="descriptions_film">
-					<img src="assets/img/inter.png">
+					<img src="inter.png">
 					Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
 				</div>
 
